@@ -3,10 +3,10 @@ package com.capstone.ads.service.impl;
 import com.capstone.ads.dto.chatBot.*;
 import com.capstone.ads.exception.AppException;
 import com.capstone.ads.exception.ErrorCode;
+import com.capstone.ads.mapper.ChatBotLogMapper;
 import com.capstone.ads.model.ChatBotLog;
 import com.capstone.ads.repository.external.ChatBotRepository;
 import com.capstone.ads.repository.internal.ChatBotLogRepository;
-import com.capstone.ads.repository.internal.UsersRepository;
 import com.capstone.ads.service.ChatBotService;
 import com.capstone.ads.utils.SecurityContextUtils;
 import lombok.RequiredArgsConstructor;
@@ -17,20 +17,20 @@ import org.springframework.web.multipart.MultipartFile;
 import java.time.LocalDateTime;
 import java.util.List;
 
-
 @Service
 @RequiredArgsConstructor
 public class ChatBotServiceImpl implements ChatBotService {
 
-    private final ChatBotRepository openAiClient;
+    private final ChatBotLogRepository chatBotLogRepository;
+    private final SecurityContextUtils securityContextUtils;
+    private final ChatBotRepository chatBotRepository;
+    private final ChatBotLogMapper chatBotLogMapper;
+
     @Value("${spring.ai.openai.api-key}")
     private String openaiApiKey;
-    private final UsersRepository userRepository;
     @Value("${spring.ai.openai.chat.options.model}")
     private String modelName;
-    private final ChatBotLogRepository chatBotRepository;
-    private final UsersRepository usersRepository;
-    private final SecurityContextUtils securityContextUtils;
+
     @Override
     public String chat(String prompt) {
         if (prompt == null || prompt.trim().isEmpty()) {
@@ -42,57 +42,13 @@ public class ChatBotServiceImpl implements ChatBotService {
                 new ChatCompletionRequest.Message("system", "Bạn là trợ lý AI tư vấn về thiết kế và in ấn biển quảng cáo."),
                 new ChatCompletionRequest.Message("user", prompt)
         ));
-        ChatCompletionResponse response = openAiClient.getChatCompletions(
+        ChatCompletionResponse response = chatBotRepository.getChatCompletions(
                 "Bearer " + openaiApiKey,
-                request
-        );
-        // Validate response
-        if (response == null || response.getChoices() == null || response.getChoices().isEmpty()) {
-            throw new AppException(ErrorCode.EXTERNAL_SERVICE_ERROR);
-        }
-
-        // Extract content
-        String content = response.getChoices().get(0).getMessage().getContent();
-        if (content == null || content.trim().isEmpty()) {
-            throw new AppException(ErrorCode.EXTERNAL_SERVICE_ERROR);
-        }
-
-        // Save response to database
+                request);
         saveResponse(response, prompt);
-        return response.getChoices().get(0).getMessage().getContent();
+        return response.getChoices().getFirst().getMessage().getContent();
     }
 
-    public void saveResponse(ChatCompletionResponse response, String question) {
-        // Validate inputs
-        var user = securityContextUtils.getCurrentUser();
-        if (response == null) {
-            throw new AppException(ErrorCode.INVALID_INPUT);
-        }
-        if (user == null) {
-            throw new AppException(ErrorCode.INVALID_INPUT);
-        }
-        if (question == null || question.trim().isEmpty()) {
-            throw new AppException(ErrorCode.INVALID_INPUT);
-        }
-
-        // Extract answer from response
-        String answer = (response.getChoices() != null && !response.getChoices().isEmpty())
-                ? response.getChoices().get(0).getMessage().getContent()
-                : null;
-        if (answer == null || answer.trim().isEmpty()) {
-            throw new AppException(ErrorCode.EXTERNAL_SERVICE_ERROR);
-        }
-
-        // Create and populate ChatBotLog entity
-        ChatBotLog log = new ChatBotLog();
-        log.setUsers(user);
-        log.setQuestion(question);
-        log.setAnswer(answer);
-        log.setCreatedAt(LocalDateTime.now()); // Will be overridden by @CreationTimestamp
-
-        // Save to database
-        chatBotRepository.save(log);
-    }
     @Override
     public FileUploadResponse uploadFileToFinetune(MultipartFile file){
             // Validate inputs
@@ -105,22 +61,19 @@ public class ChatBotServiceImpl implements ChatBotService {
                 throw new AppException(ErrorCode.INVALID_INPUT);
             }
             // Call OpenAI file upload API
-            FileUploadResponse response = openAiClient.uploadFile(
-                    "Bearer " + openaiApiKey,
-                    "fine-tune",
-                    file
-            );
-
-        return response;
+        return chatBotRepository.uploadFile(
+                "Bearer " + openaiApiKey,
+                "fine-tune",
+                file);
         }
+
        @Override
        public FineTuningJobResponse fineTuningJob(FineTuningJobRequest request){
            // Call OpenAI fine-tuning API
            FineTuningJobResponse response;
-               response = openAiClient.createFineTuningJob(
+               response = chatBotRepository.createFineTuningJob(
                        "Bearer " + openaiApiKey,
-                       request
-               );
+                       request);
            return response;
 
         }
@@ -129,84 +82,57 @@ public class ChatBotServiceImpl implements ChatBotService {
         if (fileId == null || fileId.trim().isEmpty()) {
             throw new AppException(ErrorCode.INVALID_INPUT);
         }
-        FileUploadResponse response;
-        try {
-            response = openAiClient.getFileById(
+        return chatBotRepository.getFileById(
                     "Bearer " + openaiApiKey,
-                    fileId
-            );
-        } catch (Exception e) {
-            throw new AppException(ErrorCode.EXTERNAL_SERVICE_ERROR);
-        }
-        if (response == null || response.getId() == null) {
-            throw new AppException(ErrorCode.EXTERNAL_SERVICE_ERROR);
-        }
-        return response;
+                    fileId);
     }
 
+    @Override
     public List<FileUploadResponse> getAllUploadedFiles() {
-        FileUploadedListResponse response;
-        try {
-            response = openAiClient.getFiles(
-                    "Bearer " + openaiApiKey
-            );
-        }catch (Exception e) {
-            throw new AppException(ErrorCode.EXTERNAL_SERVICE_ERROR);
-        }
+        FileUploadedListResponse response = chatBotRepository.getFiles(
+                    "Bearer " + openaiApiKey);
         return response.getData();
     }
+
     @Override
     public FileDeletionResponse deleteUploadedFile(String fileId) {
         if (fileId == null || fileId.trim().isEmpty()) {
             throw new AppException(ErrorCode.INVALID_INPUT);
         }
-        FileDeletionResponse response;
-        try {
-            response = openAiClient.deleteFileById(
+        return chatBotRepository.deleteFileById(
                     "Bearer " + openaiApiKey,
-                    fileId
-            );
-        }catch (Exception e) {
-            throw new AppException(ErrorCode.EXTERNAL_SERVICE_ERROR);
-        }
-        if (response == null || response.getId() == null) {
-            throw new AppException(ErrorCode.EXTERNAL_SERVICE_ERROR);
-        }
-        return response;
+                    fileId);
     }
-
 
     @Override
     public List<FineTuningJobResponse> getAllFineTuneJobs() {
-        FineTuningJobListResponse response;
-        try {
-            response = openAiClient.getFineTuningJobs(
-                    "Bearer " + openaiApiKey
-            );
-        }catch (Exception e) {
-            throw new AppException(ErrorCode.EXTERNAL_SERVICE_ERROR);
-        }
+        FineTuningJobListResponse response = chatBotRepository.getFineTuningJobs(
+                    "Bearer " + openaiApiKey);
         return response.getData();
     }
+
+    @Override
     public FineTuningJobResponse cancelFineTuningJob(String fineTuningJobId) {
 
         if (fineTuningJobId == null || fineTuningJobId.trim().isEmpty()) {
             throw new AppException(ErrorCode.INVALID_INPUT);
         }
-        FineTuningJobResponse response;
-        try {
-            response = openAiClient.cancelFineTuningJob(
+        return chatBotRepository.cancelFineTuningJob(
                     "Bearer " + openaiApiKey,
-                    fineTuningJobId
-            );
-        } catch (Exception e) {
-
-            throw new AppException(ErrorCode.EXTERNAL_SERVICE_ERROR);
-        }
-        if (response == null || response.getId() == null) {
-            throw new AppException(ErrorCode.EXTERNAL_SERVICE_ERROR);
-        }
-        return response;
+                    fineTuningJobId);
     }
 
+    private void saveResponse(ChatCompletionResponse response, String question) {
+
+        var userId = securityContextUtils.getCurrentUserId();
+        // Extract answer from response
+        String answer = (response.getChoices() != null && !response.getChoices().isEmpty())
+                ? response.getChoices().getFirst().getMessage().getContent()
+                : null;
+        if (answer == null || answer.trim().isEmpty()) {
+            throw new AppException(ErrorCode.EXTERNAL_SERVICE_ERROR);
+        }
+        ChatBotLog log = chatBotLogMapper.toEntity(question, answer, userId);
+        chatBotLogRepository.save(log);
+    }
 }
